bg tutorial updates

--- a/tutorial_TeX/RB_Biogeography_Tutorial/RB_Biogeography_Tutorial.tex
+++ b/tutorial_TeX/RB_Biogeography_Tutorial/RB_Biogeography_Tutorial.tex
@@ -24,6 +24,8 @@
 \input{RB_Biogeography_Tutorial_2_content}
 \input{RB_Biogeography_Tutorial_3_content}
 
+\bibliography{bayes}
+
 Version dated: \today
 
 
