--- a/tutorial_TeX/RB_Biogeography_Tutorial/RB_Biogeography_Tutorial.tex
+++ b/tutorial_TeX/RB_Biogeography_Tutorial/RB_Biogeography_Tutorial.tex
@@ -5,7 +5,7 @@
 \renewcommand{\headrulewidth}{0.5pt}
 \headsep = 20pt
 \lhead{ }
-\rhead{\textsc {\RevBayes~Tutorial --- Substitution Models}}
+\rhead{\textsc {\RevBayes~Tutorial --- Biogeographic Analysis}}
 
 \thispagestyle{plain}
 \begin{center}
