Just small fixes to make it compile.

--- a/tutorial_TeX/RB_Biogeography_Tutorial/RB_Biogeography_Tutorial_1_content.tex
+++ b/tutorial_TeX/RB_Biogeography_Tutorial/RB_Biogeography_Tutorial_1_content.tex
@@ -5,7 +5,7 @@
 These models will rely on presence-absence data, where a species is observed or not observed across multiple discrete areas.
 For example, say there are three areas: A, B, and C.
 Say a species is present in areas A and C, then its range equals AC, which can also be encoded into the length-3 bit vector, 101.
-Bit vectors may also be transformed into (decimal) integers, e.g. the binary number 101 equals the decimal number 5.
+Bit vectors may also be transformed into (decimal) integers, \EG the binary number 101 equals the decimal number 5.
 Typically, decimal representation is not used in discussion, but it is useful to keep in mind when considering the total number of possible ranges for a species.
 
 \subsection{Modeling anagenic range evolution}
