--- a/tutorial_TeX/RB_Biogeography_Tutorial/RB_Biogeography_Tutorial_3_content.tex
+++ b/tutorial_TeX/RB_Biogeography_Tutorial/RB_Biogeography_Tutorial_3_content.tex
@@ -489,7 +489,7 @@ Phylowood also offers a masking effect that persists until an unmask command is 
 \begin{figure}[H]
 \centering
 \includegraphics[width=4in]{figures/phw_br23}
-\caption{Phylowood frame highlighting the posterior range for Old World MRCA.}
+\caption{Phylowood frame highlighting the ancestral range for the MRCA extant lorises.}
 \end{figure}
 
 Now that the masking effects are in place, you're free to interact with other map components.
