Minor text edits.

--- a/tutorial_TeX/RB_Biogeography_Tutorial/RB_Biogeography_Tutorial_1_content.tex
+++ b/tutorial_TeX/RB_Biogeography_Tutorial/RB_Biogeography_Tutorial_1_content.tex
@@ -43,7 +43,7 @@ The rates in the transition matrix for three areas might appear as
 \]
 where $e = ( e_A, e_B, e_C )$ are the (local) extinction rates per area, and $d = ( d_{AB}, d_{AC}, d_{BC}, d_{CB}, d_{CA}, d_{BA})$ are the dispersal rates between areas.
 
-{\bf \framebox{?} For the three-area DEC rate matrix above, what is the rate of leaving state 101? That is, what is the absolute value of the diagonal term in the rate matrix for $Q_{AB,AB}$? }
+{\bf \framebox{?} For the three-area DEC rate matrix above, what is the rate of leaving state 101 (which is the coded state for range AB)? That is, what is the absolute value of the diagonal term in the rate matrix for $Q_{AB,AB}$, because the diagonal term is equal to minus the sum of all other entries in the row? }
 
 Note the rate of more than one event occurring simultaneously is zero, so a range must expand twice by one area in order to expand by two areas.
 
