--- a/tutorial_TeX/RB_Biogeography_Tutorial/RB_Biogeography_Tutorial_3_content.tex
+++ b/tutorial_TeX/RB_Biogeography_Tutorial/RB_Biogeography_Tutorial_3_content.tex
@@ -341,9 +341,9 @@ If you're following this tutorial in a lab setting, you should proceed using the
 
 You will need a node-indexed phylogeny to interpret ancestral state reconstructions. First, open FigTree and load the Newick tree stored in {\tt data/primates.tree.index.tre}. Expand ``Node Labels'' and change ``Display'' to the custom node label. All sampled characters have a node index, which corresponds to the branch ancestral to the indexed node.
 
-%\begin{centering}
-%\includegraphics[width=4in]{figures/figtree_node_label}
-%\end{centering}
+\begin{centering}
+\includegraphics[width=4in]{figures/figtree_node_label}
+\end{centering}
 
 We'll focus some attention on node 42, the most recent common ancestor of chimps and macaques, designated as the Old World most recent common ancestor (MRCA).
 
