mjl learns to add

--- a/tutorial_TeX/RB_Biogeography_Tutorial/RB_Biogeography_Tutorial_1_content.tex
+++ b/tutorial_TeX/RB_Biogeography_Tutorial/RB_Biogeography_Tutorial_1_content.tex
@@ -76,14 +76,14 @@ Under allopatric cladogenesis, the ancestral range is split evenly among daughte
 Both daughter lineages inherit the entire ancestral species range following widespread sympatric cladogenic events.
 For an excellent overview of described state transitions for cladogenic events, see \citet{matzke13}.
 
-{\bf \framebox{?} What are the 6 possible states in the daughter lineages after cladogenesis given the state is $AB$ before cladogenesis?}
+{\bf \framebox{?} Given the state is $AB$ before cladogenesis, and allowing subset sympatry, widespread sympatry, and allopatry, what are the 7 possible states in the daughter lineages after cladogenesis?}
 
 The probabilities of anagenic change along lineages must account for all combinations of starting states and ending states.
 For 3 areas, there are 8 states, and thus $8 \times 8 = 64$ probability terms for pairs of states.
 For cladogenic change, we need transition probabilities for all combinations of states before cladogenesis, after cladogenesis for the left lineage, and after cladogenesis for the right lineage.
 Like above, for three areas, there are 8 states, and $8 \times 8 \times 8 = 512$ cladogenic probability terms.
 
-{\bf \framebox{?} For three areas, there are 3 + 12 + 6 = 21 possible sympatry events and 6 + 6 = 12 possible allopatry events. How many terms in the cladogenesis matrix are zero?}
+{\bf \framebox{?} For three areas, 3 + 4 + 18 + 12 possible cladogenesis events. What proportion of terms in the cladogenesis matrix are zero?}
 
 The DEC model ignores speciation events hidden by extinction or incomplete taxon sampling.
 The probability of cladogenesis and local extinction events would ideally be linked to a birth-death process, as it is in the GeoSSE model \citep{goldberg11}.
